@@ -1,26 +1,0 @@
-Function: intnuminitgen
-Section: sums
-C-Name: intnuminitgen0
-Prototype: VGGED0,L,p
-Help: intnuminitgen(t,a,b,phi,{m=0}): initialize tables for
- integrations from a to b using abscissas phi(t) and weights ph'(t). Note that
- there is no equal sign after the variable name t since t always goes from
- -infty to +infty, but it is ph(t) which goes from a to b.
-Doc: initialize tables for integrations from $a$ to $b$ with
-
- \item abscissas $\phi(t)$, assumed monotonic with
- $\lim_{-\infty} \phi = a$ and $\lim_{+\infty} \phi = b$;
-
- \item weights $\phi'(t)$, estimated via \kbd{derivnum}.
-
- Note that there is no equal sign after the variable name $t$ since $t$
- always goes from $-\infty$ to $+\infty$, but it is $\phi(t)$ which goes from
- $a$ to $b$.
-
- If $a = -b$, whether finite or infinite, we assume that $\phi$ is \emph{odd}.
-
- The behaviour at $a$ or $b$ of the function to be integrated may be
- indicated here as in \tet{intnum}, but \emph{must not} be specified again
- in \tet{intnum}.
-
- \synt{intnuminitgen}{void *E, GEN (*eval)(void*,GEN), GEN a, GEN b, long m, long prec}
